@@ -1,6 +1,6 @@
 Metadata-Version: 1.0
 Name: guppy
-Version: 0.1.8
+Version: 0.1.9
 Summary: Guppy-PE -- A Python Programming Environment
 Home-page: http://guppy-pe.sourceforge.net
 Author: Sverker Nilsson
