@@ -182,4 +182,4 @@ Entering GSL mode calls with no arguments the value of the variable
 `gsl-mode-hook', if that value exists and is not nil; see the `Hooks'
 section of the Elisp manual for details.</pre><! --  end pre
  -->
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Tue Apr  8 18:42:31 2008</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed Apr  9 00:20:49 2008</div></body></html>
