@@ -86,4 +86,4 @@ for the hpy method.
  There is currently no arguments to this constructor, I may think
 of adding some options in the future, but it has not yet been needed.
 </p></dd></dl></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Tue Apr  8 18:42:31 2008</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed Apr  9 00:20:49 2008</div></body></html>
